# eva-cpp

./: CMakeLists.txt  platformio.ini
src/: Drone.cpp  Drone.h  InputFrame.h  Logger.cpp  Logger.h  LoggerInterface.h  Statistics.h  eva.h  init.cpp
src/Agents/: AgentClientInterface.h  AgentInterface.h  AgentManager.cpp  AgentManager.h
src/Agents/Wifi/: WifiAgent.cpp  WifiAgent.h  WifiAgentClient.cpp  WifiAgentClient.h
src/Hardware/SpeedControllers/: SpeedController.cpp  SpeedController.h  SpeedControllerManager.cpp  SpeedControllerManager.h
